feat: ajustes para mvp
