# src/infrastructure/middlewares/validators/organizer/PlayerListValidator.ts
@@ -9,21 +9,17 @@ const schemas = {
     ],
 
     updateListPlayer: [
-        param('listPlayerId')
-            .isString().withMessage('listPlayerId should be a type of text')
-            .notEmpty().withMessage('listPlayerId should be declared Path Variable'),
-
-        body('listId')
-            .notEmpty().withMessage('Id da lista é obrigatório')
-            .isNumeric().withMessage('Id da lista deve ser um número'),
+        param('listId')
+            .isString().withMessage('listId should be a type of text')
+            .notEmpty().withMessage('listId should be declared Path Variable'),
 
         body('playerId')
-            .notEmpty().withMessage('Id do jogador é obrigatório')
-            .isNumeric().withMessage('Id do jogador deve ser um número'),   
+            .notEmpty().withMessage('Id do jogador é obrigatorio')
+            .isNumeric().withMessage('Id do jogador deve ser um número'),
 
         body('status')
-            .notEmpty().withMessage('Status é obrigatorio')
-            .isBoolean().withMessage('Status deve ser um booleano'),
+            .notEmpty().withMessage('Status do jogador é obrigatorio')
+            .isString().withMessage('Status do jogador deve ser uma string'),
     ],
 
     addPlayerMemberOnList: [
@@ -41,17 +37,13 @@ const schemas = {
     ],
 
     removePlayerMemberOnList: [
-        body('playerId')
+        param('listId')
+            .isString().withMessage('playerListId should be a type of text')
+            .notEmpty().withMessage('playerListId should be declared Path Variable'),
+
+        param('playerId')
             .notEmpty().withMessage('Id do jogador é obrigatório')
             .isNumeric().withMessage('Id do jogador deve ser um número'),
-
-        body('listId')  
-            .notEmpty().withMessage('Id da lista é obrigatório')
-            .isNumeric().withMessage('Id da lista deve ser um número'),
-
-        body('playerListId')
-            .notEmpty().withMessage('Id do playerList é obrigatorio')
-            .isNumeric().withMessage('Id do playerList deve ser um número'),
     ],
 
     addGuestMemberOnList: [
@@ -73,7 +65,7 @@ const schemas = {
             .notEmpty().withMessage('Id do jogador é obrigatório')
             .isNumeric().withMessage('Id do jogador deve ser um número'),
 
-        body('listId')  
+        body('listId')
             .notEmpty().withMessage('Id da lista é obrigatório')
             .isNumeric().withMessage('Id da lista deve ser um número'),
 
